[package]
name = "jara"
version = "0.1.0"
edition = "2021"
authors = ["EvanLuo42"]
description = "A Java Runtime Manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "cargo"] }
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.12"
serde = { version = "1.0.193", features = ["derive"] }
colored = "2.1.0"
simple-home-dir = "0.3.2"
